--- a/app/src/main/res/layout/fragment_add_transaction.xml
+++ b/app/src/main/res/layout/fragment_add_transaction.xml
@@ -5,29 +5,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EditEntryActivity">
+    tools:context=".fragments.AddTransactionFragment">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar_add_entry"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/green_400"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:theme="@style/CustomToolbarStyle"
-        />
 
     <ScrollView
         android:id="@+id/sv_main"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:fillViewport="true"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar_add_entry"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintTop_toBottomOf="parent"
         app:layout_constraintVertical_bias="1.0">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -110,7 +100,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/til_date"
-            />
+                />
             <Spinner
                 android:id="@+id/spinner_frequency"
                 style="@style/Widget.AppCompat.Spinner"
@@ -145,7 +135,7 @@
                 >
             </TextView>
             <Spinner
-                android:id="@+id/spinner_entry_type"
+                android:id="@+id/spinner_transaction_type"
                 style="@style/Widget.AppCompat.Spinner"
                 android:layout_width="300dp"
                 android:layout_height="?attr/dropdownListPreferredItemHeight"
@@ -163,7 +153,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/tv_spinner_entry_type">
 
             </Spinner>
-            
+
             <Button
                 android:id="@+id/btn_save"
                 android:layout_width="match_parent"
@@ -179,7 +169,7 @@
                 android:textSize="@dimen/btn_text_size"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/spinner_entry_type"></Button>
+                app:layout_constraintTop_toBottomOf="@id/spinner_transaction_type"></Button>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
