--- a/app/src/main/res/layout/transaction_row.xml
+++ b/app/src/main/res/layout/transaction_row.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="12sp">
+    android:padding="12sp"
+    android:id="@+id/rowTransactionLayout">
 
 
     <ImageView
